--- a/main.html
+++ b/main.html
@@ -11,20 +11,13 @@
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
         <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <script src="../js/script.js"></script>
-    <title>Harry Fresco - 35mm Film Photography Portfolio</title>
-    <meta name="description" content="Just a place to put my portfolio of my 35mm film photography. All these pictures were taken on Canon AE-1 Program. Black and white photography and colour examples?.">
+    <title>Ray Barrow</title>
+    <meta name="description" content="">
     <link rel="shortcut icon" type="image/x-icon" href="../img/icon.ico" />
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-RYGYQDTQZY"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'G-RYGYQDTQZY');
-</script>
 </head>
 
 <body>
@@ -57,14 +50,14 @@
     </script>
     <div class="container">
 
-    <img src="../img/35mm/June 2022/June22c/042480010015.webp" class="backgroundImage" alt="Black and White London Underground background image">
+    <img src="../img/test.jpg" class="backgroundImage" alt="Ray Barrow image">
 
         <div class="row  centreClass">
             <div class="col-12" style="text-align: center;">
-                <a href="may23.html"class="frontCTA" onmouseover="changeImageOpacity(0.5)" onmouseout="changeImageOpacity(1)">my 35mm photos                <div class = "row">
+                <a href="may23.html"class="frontCTA" onmouseover="changeImageOpacity(0.5)" onmouseout="changeImageOpacity(1)">my book title               <div class = "row">
                     <div class="col-1-sm">
                       <div id="musicContainer">
-                        <button class="button-17" id="musicText"></button>
+                        <button class="button-17" id="musicText">hhhhh</button>
                   
                       </div>
                         
@@ -81,25 +74,7 @@
     </div>
 
 
-<script>
-    const entry = 
-    [
-        "entry, please...",
-        "open, says me",
-        "\"\L. Ron Hubbard funny pictures\""
-    ]
 
-
-    function displayRandomMessage() {
-        var list = entry
-        var randomIndex = Math.floor(Math.random() * list.length);
-        var randomMessage = list[randomIndex];
-        var messageElement = document.getElementById("musicText");
-        messageElement.innerHTML = randomMessage;
-    }
-
-    displayRandomMessage()
-</script>
 
 </body>
 
