--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="row">
             <div class="col-md-6" style="text-align: center">
                 <a href="">
-                    <img class="bookCover" src="/img/photo.jpeg">
+                    <img class="bookCover" src="img/photo.jpeg">
                 </a>
             </div>
             <div class="col-md-6" style="text-align: center">
