--- a/index.html
+++ b/index.html
@@ -32,51 +32,87 @@
      
     </script> -->
 
-    <img src="../img/test.jpg" class="backgroundImage" alt="Ray Barrow image">
-    <div class="container centreClass" style="padding: 30px;">
+    <div class="container centreClass" style="padding: 30px; width: 60%;">
 
 
 
+
+        <div class="col-md-12" style="text-align: center;">
+            <h1 class="bookTitle">A LITTLE BIT<br>OF MY LIFE</h1>
+        </div>
         <div class="row">
-            <div class="col-md-6" style="text-align: center">
-                <a href="">
-                    <img class="bookCover" src="img/photo.jpeg">
-                </a>
-            </div>
-            <div class="col-md-6" style="text-align: center">
+            <div class="col-md-4" style="text-align: center">
                 <div class="row">
-                    <h1>Book Title</h1>
-                    <p1>this is the book descjsdfjsd vjlksdf vksjd vksjdvn skjvn lksj<br>
-                        this is the book descjsdfjsd vjlksdf vksjd vksjdvn skjvn lksj<br>
-                        this is the book descjsdfjsd vjlksdf vksjd vksjdvn skjvn lksj<br>
-                        this is the book descjsdfjsd vjlksdf vksjd vksjdvn skjvn lksj<br>
-                        this is the book descjsdfjsd vjlksdf vksjd vksjdvn skjvn lksj<br>
-                        this is the book descjsdfjsd vjlksdf vksjd vksjdvn skjvn lksj<br></p1>
-                </div><br>
-                <div class="container">
-                    <div class="row">
-                        <div class="col-6" style="text-align: center">
-
-                            <!-- Button trigger modal -->
-                            <button type="button" class="button-17" data-bs-toggle="modal"
-                                data-bs-target="#readPrompt">
-                                Read Online
-                            </button>
-
-                        </div>
-                        <div class="col-6" style="text-align: center">
-                            <!-- Button trigger modal -->
-                            <button type="button" class="button-17" data-bs-toggle="modal" data-bs-target="#downloadPrompt">
-                                Download
-                            </button>
-                        </div>
-                    </div>
+                    <h2 class="quote" style="text-align:center;">“This is sure to be one of 2024’s
+                        best and boldest.”</h2>
+                    <blockquote>
+                        <p class="quoteName" >Elle</p>
+                    </blockquote>
                 </div>
-
-                </p1>
+                <div class="row">
+                    <h2 class="quote" style="text-align:center;">“This is sure to be one of 2024’s
+                        best and boldest.”</h2>
+                    <blockquote>
+                        <p class="quoteName" >Elle</p>
+                    </blockquote>
+                </div>
+                <div class="row">
+                    <h2 class="quote" style="text-align:center;">“This is sure to be one of 2024’s
+                        best and boldest.”</h2>
+                    <blockquote>
+                        <p class="quoteName" >Elle</p>
+                    </blockquote>
+                </div>
+            </div>
+            <div class="col-md-4" style="text-align: center">
+                <img class="bookCover" src="img/photo.jpeg">
+            </div>
+            <div class="col-md-4" style="text-align: center">
+                <div class="row">
+                    <h2 class="quote" style="text-align:center;">“This is sure to be one of 2024’s
+                        best and boldest.”</h2>
+                    <blockquote>
+                        <p class="quoteName" >Elle</p>
+                    </blockquote>
+                </div>
+                <div class="row">
+                    <h2 class="quote" style="text-align:center;">“This is sure to be one of 2024’s
+                        best and boldest.”</h2>
+                    <blockquote>
+                        <p class="quoteName" >Elle</p>
+                    </blockquote>
+                </div>
+                <div class="row">
+                    <h2 class="quote" style="text-align:center;">“This is sure to be one of 2024’s
+                        best and boldest.”</h2>
+                    <blockquote>
+                        <p class="quoteName" >Elle</p>
+                    </blockquote>
+                </div>
             </div>
         </div>
-        <br>
+        <div class="row">
+
+            <div class="col-6" style="text-align: center">
+
+                <!-- Button trigger modal -->
+                <button type="button" class="newButton" data-bs-toggle="modal" data-bs-target="#readPrompt">
+                    Read Online
+                </button>
+
+            </div>
+            <div class="col-6" style="text-align: center">
+                <!-- Button trigger modal -->
+                <button type="button" class="newButton" data-bs-toggle="modal" data-bs-target="#downloadPrompt">
+                    Download
+                </button>
+            </div>
+
+        </div>
+
+
+    </div>
+    <br>
 
 
 
@@ -84,7 +120,7 @@
     </div>
 
 
-<!--     <div class="footerCentre">
+    <!--     <div class="footerCentre">
         <div class="row">
             <div class="col-12" style="text-align: center">
                 <a style="text-decoration: none;" href="https://www.alzheimers.org.uk/get-involved/donate">
@@ -107,10 +143,11 @@
                 </div>
                 <div class="modal-footer">
                     <a href="">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Read anyway</button></a>
-                    <a style="text-decoration: none;" href="https://www.alzheimers.org.uk/get-involved/donate"target="_blank">
-                    <button type="button" class="btn btn-primary">Donate</button>
-                </a>
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Read anyway</button></a>
+                    <a style="text-decoration: none;" href="https://www.alzheimers.org.uk/get-involved/donate"
+                        target="_blank">
+                        <button type="button" class="btn btn-primary">Donate</button>
+                    </a>
                 </div>
             </div>
         </div>
@@ -122,16 +159,19 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Download anyway"></button>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"
+                        aria-label="Download anyway"></button>
                 </div>
                 <div class="modal-body">
                     ...
                 </div>
                 <div class="modal-footer">
                     <a href="">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Download anyway</button></a>
-                    <a style="text-decoration: none;" href="https://www.alzheimers.org.uk/get-involved/donate"target="_blank">
-                    <button type="button" class="btn btn-primary">Donate</button></a>
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Download
+                            anyway</button></a>
+                    <a style="text-decoration: none;" href="https://www.alzheimers.org.uk/get-involved/donate"
+                        target="_blank">
+                        <button type="button" class="btn btn-primary">Donate</button></a>
                 </div>
             </div>
         </div>
