--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@
      
     </script> -->
 
-    <div class="container centreClass" style="padding: 30px; width: 60%;">
+    <div class="container centreClass" style="padding: 30px;">
 
 
 
 
-        <div class="col-md-12" style="text-align: center;">
+        <div class="col-lg-12" style="text-align: center;">
             <h1 class="bookTitle">A LITTLE BIT<br>OF MY LIFE</h1>
         </div>
         <div class="row">
-            <div class="col-md-4" style="text-align: center">
+            <div class="col-lg-4 quote1" style="text-align: center">
                 <div class="row">
                     <h2 class="quote" style="text-align:center;">“This is sure to be one of 2024’s
                         best and boldest.”</h2>
@@ -64,10 +64,10 @@
                     </blockquote>
                 </div>
             </div>
-            <div class="col-md-4" style="text-align: center">
+            <div class="col-lg-4" style="text-align: center">
                 <img class="bookCover" src="img/photo.jpeg">
             </div>
-            <div class="col-md-4" style="text-align: center">
+            <div class="col-lg-4 quote1" style="text-align: center">
                 <div class="row">
                     <h2 class="quote" style="text-align:center;">“This is sure to be one of 2024’s
                         best and boldest.”</h2>
@@ -90,6 +90,54 @@
                     </blockquote>
                 </div>
             </div>
+        </div>
+        <div class="row quoteMobile">
+            <div class="col-lg-12" style="text-align: center">
+                <div class="row">
+                    <h2 class="quote" style="text-align:center;">“This is sure to be one of 2024’s
+                        best and boldest.”</h2>
+                    <blockquote>
+                        <p class="quoteName" >Elle</p>
+                    </blockquote>
+                </div>
+                <div class="row">
+                    <h2 class="quote" style="text-align:center;">“This is sure to be one of 2024’s
+                        best and boldest.”</h2>
+                    <blockquote>
+                        <p class="quoteName" >Elle</p>
+                    </blockquote>
+                </div>
+                <div class="row">
+                    <h2 class="quote" style="text-align:center;">“This is sure to be one of 2024’s
+                        best and boldest.”</h2>
+                    <blockquote>
+                        <p class="quoteName" >Elle</p>
+                    </blockquote>
+                </div>
+      
+
+                <div class="row">
+                    <h2 class="quote" style="text-align:center;">“This is sure to be one of 2024’s
+                        best and boldest.”</h2>
+                    <blockquote>
+                        <p class="quoteName" >Elle</p>
+                    </blockquote>
+                </div>
+                <div class="row">
+                    <h2 class="quote" style="text-align:center;">“This is sure to be one of 2024’s
+                        best and boldest.”</h2>
+                    <blockquote>
+                        <p class="quoteName" >Elle</p>
+                    </blockquote>
+                </div>
+                <div class="row">
+                    <h2 class="quote" style="text-align:center;">“This is sure to be one of 2024’s
+                        best and boldest.”</h2>
+                    <blockquote>
+                        <p class="quoteName" >Elle</p>
+                    </blockquote>
+                </div>
+                </div>
         </div>
         <div class="row">
 
