--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     <link rel="stylesheet" href="styles.css">
     <script src="../js/script.js"></script>
-    <title>Ray Barrow</title>
-    <meta name="description" content="">
+    <title>A Little Bit Of My Life - Ray Barrow</title>
+    <meta name="description" content="A book of my life">
     <link rel="shortcut icon" type="image/x-icon" href="../img/icon.ico" />
     <!-- Google tag (gtag.js) -->
 
@@ -143,87 +143,31 @@
 
             <div class="col-6" style="text-align: center">
 
-                <!-- Button trigger modal -->
-                <button type="button" class="newButton" data-bs-toggle="modal" data-bs-target="#readPrompt">
+                <!-- Button trigger modal -->   
+               <a href="book.html" target="_blank">
+                <button type="button" class="newButton">
                     Read Online
                 </button>
+               </a>
+
 
             </div>
             <div class="col-6" style="text-align: center">
                 <!-- Button trigger modal -->
-                <button type="button" class="newButton" data-bs-toggle="modal" data-bs-target="#downloadPrompt">
-                    Download
-                </button>
-            </div>
-
-        </div>
-
-
-    </div>
-    <br>
-
-
-
-
-    </div>
-
-
-    <!--     <div class="footerCentre">
-        <div class="row">
-            <div class="col-12" style="text-align: center">
-                <a style="text-decoration: none;" href="https://www.alzheimers.org.uk/get-involved/donate">
-                    <button class="button-17" id="musicText">Donate</button>
+                <a href="book.pdf" download>
+                    <button type="button" class="newButton">
+                        Download
+                    </button>
                 </a>
 
             </div>
+
         </div>
-    </div> -->
-    <!-- Modal Read -->
-    <div class="modal fade" id="readPrompt" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h1 class="modal-title fs-5" id="readModalLabel">Modal title</h1>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    ...
-                </div>
-                <div class="modal-footer">
-                    <a href="">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Read anyway</button></a>
-                    <a style="text-decoration: none;" href="https://www.alzheimers.org.uk/get-involved/donate"
-                        target="_blank">
-                        <button type="button" class="btn btn-primary">Donate</button>
-                    </a>
-                </div>
-            </div>
-        </div>
+
+
+    </div>
     </div>
 
-    <!-- Modal Download-->
-    <div class="modal fade" id="downloadPrompt" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal"
-                        aria-label="Download anyway"></button>
-                </div>
-                <div class="modal-body">
-                    ...
-                </div>
-                <div class="modal-footer">
-                    <a href="">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Download
-                            anyway</button></a>
-                    <a style="text-decoration: none;" href="https://www.alzheimers.org.uk/get-involved/donate"
-                        target="_blank">
-                        <button type="button" class="btn btn-primary">Donate</button></a>
-                </div>
-            </div>
-        </div>
-    </div>
 </body>
 
 </html>
