--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             <div class="col-6" style="text-align: center">
 
                 <!-- Button trigger modal -->   
-               <a href="chapterIndex.html" target="_blank">
+               <a href="chapterIndex.html">
                 <button type="button" class="newButton">
                     Read Online
                 </button>
