--- a/index.html
+++ b/index.html
@@ -43,24 +43,21 @@
         <div class="row">
             <div class="col-lg-4 quote1" style="text-align: center">
                 <div class="row">
-                    <h2 class="quote" style="text-align:center;">“This is sure to be one of 2024’s
-                        best and boldest.”</h2>
+                    <h2 class="quote" style="text-align:center;">“Car-wreckingly funny”</h2>
                     <blockquote>
-                        <p class="quoteName" >Elle</p>
+                        <p class="quoteName" >Next door neighbour</p>
                     </blockquote>
                 </div>
                 <div class="row">
-                    <h2 class="quote" style="text-align:center;">“This is sure to be one of 2024’s
-                        best and boldest.”</h2>
+                    <h2 class="quote" style="text-align:center;">“Nothing prepares you for this. I cheered, I laughed, I cried.”</h2>
                     <blockquote>
-                        <p class="quoteName" >Elle</p>
+                        <p class="quoteName" >Richard E Grant</p>
                     </blockquote>
                 </div>
                 <div class="row">
-                    <h2 class="quote" style="text-align:center;">“This is sure to be one of 2024’s
-                        best and boldest.”</h2>
+                    <h2 class="quote" style="text-align:center;">“Will this quote be on the website?”</h2>
                     <blockquote>
-                        <p class="quoteName" >Elle</p>
+                        <p class="quoteName" >James Fresco</p>
                     </blockquote>
                 </div>
             </div>
@@ -69,24 +66,21 @@
             </div>
             <div class="col-lg-4 quote1" style="text-align: center">
                 <div class="row">
-                    <h2 class="quote" style="text-align:center;">“This is sure to be one of 2024’s
-                        best and boldest.”</h2>
+                    <h2 class="quote" style="text-align:center;">“I want my hair back”</h2>
                     <blockquote>
-                        <p class="quoteName" >Elle</p>
+                        <p class="quoteName" >Chewbacca</p>
                     </blockquote>
                 </div>
                 <div class="row">
-                    <h2 class="quote" style="text-align:center;">“This is sure to be one of 2024’s
-                        best and boldest.”</h2>
+                    <h2 class="quote" style="text-align:center;">“Ooh what a lovely book.”</h2>
                     <blockquote>
-                        <p class="quoteName" >Elle</p>
+                        <p class="quoteName" >The Times</p>
                     </blockquote>
                 </div>
                 <div class="row">
-                    <h2 class="quote" style="text-align:center;">“This is sure to be one of 2024’s
-                        best and boldest.”</h2>
+                    <h2 class="quote" style="text-align:center;">“Loved it from cover to cover”</h2>
                     <blockquote>
-                        <p class="quoteName" >Elle</p>
+                        <p class="quoteName" >Stevie Wonder</p>
                     </blockquote>
                 </div>
             </div>
@@ -94,47 +88,40 @@
         <div class="row quoteMobile">
             <div class="col-lg-12" style="text-align: center">
                 <div class="row">
-                    <h2 class="quote" style="text-align:center;">“This is sure to be one of 2024’s
-                        best and boldest.”</h2>
+                    <h2 class="quote" style="text-align:center;">“Car-wreckingly funny”</h2>
                     <blockquote>
-                        <p class="quoteName" >Elle</p>
+                        <p class="quoteName" >Next door neighbour</p>
                     </blockquote>
                 </div>
                 <div class="row">
-                    <h2 class="quote" style="text-align:center;">“This is sure to be one of 2024’s
-                        best and boldest.”</h2>
+                    <h2 class="quote" style="text-align:center;">“Nothing prepares you for this. I cheered, I laughed, I cried.”</h2>
                     <blockquote>
-                        <p class="quoteName" >Elle</p>
+                        <p class="quoteName" >Richard E Grant</p>
                     </blockquote>
                 </div>
                 <div class="row">
-                    <h2 class="quote" style="text-align:center;">“This is sure to be one of 2024’s
-                        best and boldest.”</h2>
+                    <h2 class="quote" style="text-align:center;">“Will this quote be on the website?”</h2>
                     <blockquote>
-                        <p class="quoteName" >Elle</p>
+                        <p class="quoteName" >James Fresco</p>
                     </blockquote>
                 </div>
       
-
                 <div class="row">
-                    <h2 class="quote" style="text-align:center;">“This is sure to be one of 2024’s
-                        best and boldest.”</h2>
+                    <h2 class="quote" style="text-align:center;">“I want my hair back”</h2>
                     <blockquote>
-                        <p class="quoteName" >Elle</p>
+                        <p class="quoteName" >Chewbacca</p>
                     </blockquote>
                 </div>
                 <div class="row">
-                    <h2 class="quote" style="text-align:center;">“This is sure to be one of 2024’s
-                        best and boldest.”</h2>
+                    <h2 class="quote" style="text-align:center;">“Ooh what a lovely book.”</h2>
                     <blockquote>
-                        <p class="quoteName" >Elle</p>
+                        <p class="quoteName" >The Times</p>
                     </blockquote>
                 </div>
                 <div class="row">
-                    <h2 class="quote" style="text-align:center;">“This is sure to be one of 2024’s
-                        best and boldest.”</h2>
+                    <h2 class="quote" style="text-align:center;">“Loved it from cover to cover”</h2>
                     <blockquote>
-                        <p class="quoteName" >Elle</p>
+                        <p class="quoteName" >Stevie Wonder</p>
                     </blockquote>
                 </div>
                 </div>
