--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             </div>
             <div class="col-6" style="text-align: center">
                 <!-- Button trigger modal -->
-                <a href="book(unedited).pdf" download>
+                <a href="book(unedited).pdf" >
                     <button type="button" class="newButton">
                         Download
                     </button>
