--- a/book.html
+++ b/book.html
@@ -21,7 +21,9 @@
 </head>
 
 <body>
-    <embed src= "book.pdf" width= 100%>
+    <object data="book(unedited).pdf" type="application/pdf" width="100%" height="100%">
+        <p>Alternative text - include a link <a href="myfile.pdf">to the PDF!</a></p>
+      </object>
 </body>
 
 </html>
