--- a/index.html
+++ b/index.html
@@ -128,9 +128,9 @@
         </div>
         <div class="row">
 
-            <div class="col-6" style="text-align: center">
+<!--             <div class="col-6" style="text-align: center">
 
-                <!-- Button trigger modal -->   
+                  
                <a href="chapterIndex.html">
                 <button type="button" class="newButton">
                     Read Online
@@ -138,9 +138,9 @@
                </a>
 
 
-            </div>
-            <div class="col-6" style="text-align: center">
-                <!-- Button trigger modal -->
+            </div> -->
+            <div class="col-12" style="text-align: center">
+       
                 <a href="book(unedited).pdf" >
                     <button type="button" class="newButton">
                         Download
