--- a/book.html
+++ b/book.html
@@ -12,7 +12,6 @@
         crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     <link rel="stylesheet" href="styles.css">
-    <script src="../js/script.js"></script>
     <title>Ray Barrow</title>
     <meta name="description" content="">
     <link rel="shortcut icon" type="image/x-icon" href="../img/icon.ico" />
@@ -21,9 +20,15 @@
 </head>
 
 <body>
-    <object data="book(unedited).pdf" type="application/pdf" width="100%" height="100%">
-        <p>Alternative text - include a link <a href="myfile.pdf">to the PDF!</a></p>
-      </object>
+    <div class="container">
+        <div class="row">
+            <iframe src="book(unedited).pdf" width="100%" scrolling="no" style="height: 100vh;"></iframe>
+        </div>
+        
+    </div>
+   
+
+
 </body>
 
 </html>
