--- a/index.html
+++ b/index.html
@@ -139,11 +139,12 @@
 
 
             </div> -->
+            <div class="row"><br></div>
             <div class="col-12" style="text-align: center">
        
-                <a href="book(unedited).pdf" >
+                <a href="book.html" >
                     <button type="button" class="newButton">
-                        Download
+                        View/Download
                     </button>
                 </a>
 
