added final book

--- a/book.html
+++ b/book.html
@@ -22,7 +22,7 @@
 <body>
     <div class="container">
         <div class="row">
-            <iframe src="book(unedited).pdf" width="100%" scrolling="no" style="height: 100vh;"></iframe>
+            <iframe src="ALittleBitOfMyLife.pdf" width="100%" style="height: 100vh;"></iframe>
         </div>
         
     </div>
