--- a/index.html
+++ b/index.html
@@ -142,9 +142,9 @@
             
             <div class="col-lg-6" style="text-align: center">
        
-                <a href="book.html" >
+                <a href="ALittleBitOfMyLife.pdf" download>
                     <button type="button" class="newButton" style="margin:10px;">
-                        View/Download
+                        Download
                     </button>
                 </a>
 
