--- a/ABitOfMyLifev1.html
+++ b/ABitOfMyLifev1.html
@@ -2,6 +2,11 @@
 
 <head>
     <meta content="text/html; charset=UTF-8" http-equiv="content-type">
+    <title>A Little Bit Of My Life - Ray Barrow</title>
+    <meta name="description" content="This is written in words that I use myself, there are
+    no substitute words. The punctuation has not been changed, most of the spelling has been checked with the
+    spellcheck on the Mac, the grammar is how it is, so as you read this you may have a good laugh at the way
+    it's written">
     <style type="text/css">
         ol {
             margin: 0;
@@ -394,7 +399,7 @@ border-color: #272727;
     <p class="c19"><span class="c2">I first met my mum in 1942. I was born in a top floor apartment, in Kier Hardie
             House, Hazellville Road, a large block of flats at the top of Crouch End Road, North London. This is where
             we lived with three elder brothers and one younger sister, who was born in Liverpool. John was the oldest
-            out of us all. He was born in 1936. Next came Fred, 1938 and Bil, &nbsp;1939 (they were born in Blundell St,
+            out of us all. He was born in 1936. Next came Fred, 1938 and Bill, &nbsp;1939 (they were born in Blundell St,
             North London). My Dad was a professional soldier in the Army. He was in the Royal Fusiliers. Then, because
             of his railway knowledge, was transferred to the Royal Engineers. He worked on the railways in France and
             Germany in the 2nd World War. I can only remember one thing whilst we lived there, that is when I was about
