--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
     <link rel="stylesheet" href="styles.css">
     <script src="../js/script.js"></script>
     <title>A Little Bit Of My Life - Ray Barrow</title>
-    <meta name="description" content="A book of my life">
+    <meta name="description" content="This is written in words that I use myself, there are
+    no substitute words. The punctuation has not been changed, most of the spelling has been checked with the
+    spellcheck on the Mac, the grammar is how it is, so as you read this you may have a good laugh at the way
+    it's written">
     <link rel="shortcut icon" type="image/x-icon" href="../img/icon.ico" />
     <!-- Google tag (gtag.js) -->
 
@@ -142,9 +145,9 @@
             
             <div class="col-lg-6" style="text-align: center">
        
-                <a href="ALittleBitOfMyLife.pdf" download>
+                <a href="A Little Bit Of My Life - v2.pdf" download>
                     <button type="button" class="newButton" style="margin:10px;">
-                        Download
+                        Download/Print
                     </button>
                 </a>
 
