added final paragraph

--- a/ABitOfMyLifev1.html
+++ b/ABitOfMyLifev1.html
@@ -2576,7 +2576,28 @@ border-color: #272727;
                 title=""></span><br><span class="c13 c2"style="text-align: center;">Myself, Sensei Shinohara and Dean Ince</span>
         <hr style="page-break-before:always;display:none;">
     </p>
-   
+    <p class="c2 c5"><span class="c4 c3"></span></p>
+    <p class="c2 c5"><span class="c4 c3"></span></p>
+    <p class="c2 c5"><span class="c4 c3"></span></p>
+    <p class="c2 c5"><span class="c4 c3"></span></p>
+    <p class="c2 c5"><span class="c4 c3"></span></p>
+    <p class="c2 c5"><span class="c4 c3"></span></p>
+    <p class="c2 c5"><span class="c4 c3"></span></p>
+    <p class="c2 c5"><span class="c4 c3"></span></p>
+    <p class="c2 c5"><span class="c4 c3"></span></p>
+    <p class="c2 c5"><span class="c4 c3"></span></p>
+    <p class="c2 c5"><span class="c4 c3"></span></p>
+    <h1 class="c2 c8" id="h.5k0hrc13fa2t"style="text-align: center;"><span class="c4 c20">A Little Bit of My Life</span></h1>
+    <p class="c16"style="text-align: center;"><span class="c3">&hellip;and finally, I&rsquo;d like to thank everyone that&rsquo;s been a part of my
+            life. </span>
+        <hr style="page-break-before:always;display:none;">
+    </p>
+    <p class="c2 c5"><span class="c4 c3"></span></p>
+    <p class="c2 c5"><span class="c4 c3"></span></p>
+    <p class="c2 c5"><span class="c4 c3"></span></p>
+    <p class="c2 c5"><span class="c4 c3"></span></p>
+    <p class="c2 c5"><span class="c4 c3"></span></p>
+    <p class="c2 c5"><span class="c4 c3"></span></p>
 </div>
 </body>
 
