removed book shot

--- a/index.html
+++ b/index.html
@@ -164,8 +164,7 @@
         [
             "<img class='bookCover' src='img/cover1.webp'>",
             "<img class='bookCover' src='img/cover2.webp'>",
-            "<img class='bookCover' src='img/cover3.webp'>",
-            "<img src='img/cover1bookv3.png' style='width:90%'>"
+            "<img class='bookCover' src='img/cover3.webp'>"
         ]
     
     
