--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     no substitute words. The punctuation has not been changed, most of the spelling has been checked with the
     spellcheck on the Mac, the grammar is how it is, so as you read this you may have a good laugh at the way
     it's written">
-    <link rel="shortcut icon" type="image/x-icon" href="../img/icon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="img/icon.ico" />
     <!-- Google tag (gtag.js) -->
 
 </head>
