--- a/book.html
+++ b/book.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="styles.css">
     <title>Ray Barrow</title>
     <meta name="description" content="">
-    <link rel="shortcut icon" type="image/x-icon" href="../img/icon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="img/icon.ico" />
     <!-- Google tag (gtag.js) -->
 
 </head>
