--- a/ABitOfMyLifev1.html
+++ b/ABitOfMyLifev1.html
@@ -8,6 +8,15 @@
     spellcheck on the Mac, the grammar is how it is, so as you read this you may have a good laugh at the way
     it's written">
     <link rel="shortcut icon" type="image/x-icon" href="img/icon.ico" />
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-J9WR0MWY7J"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-J9WR0MWY7J');
+</script>
     <style type="text/css">
         
         ol {
