Updated Kindle Book

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                 </a>
             </div>
             <div class="row">
-                <a href="A Little Bit Of My Life - Ray Barrow.mobi" style="color: black;" download>
+                <a href="A Little Bit Of My Life - Ray Barrow.epub" style="color: black;" download>
                     Download for Kindle
                 </a></div>
 
